<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_info">

    <fragment
        android:id="@+id/nav_info"
        android:name="kr.cepiloth.bserdictionary.ui.information.InfoFragment"
        android:label="@string/menu_game_information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/nav_broadcast"
        android:name="kr.cepiloth.bserdictionary.ui.broadcast.BroadcastFragment"
        android:label="@string/menu_broadcast"
        tools:layout="@layout/fragment_broadcast" >
    </fragment>

    <fragment
        android:id="@+id/nav_total"
        android:name="kr.cepiloth.bserdictionary.ui.statics.TotalFragment"
        android:label="@string/menu_broadcast"
        tools:layout="@layout/fragment_broadcast" />

    <fragment
        android:id="@+id/nav_addon"
        android:name="kr.cepiloth.bserdictionary.ui.addon.AddonFragment"
        android:label="@string/menu_addon"
        tools:layout="@layout/fragment_addon" />

    <fragment
        android:id="@+id/nav_home"
        android:name="kr.cepiloth.bserdictionary.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="kr.cepiloth.bserdictionary.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="kr.cepiloth.bserdictionary.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>