<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_game_information" />
        <item
            android:id="@+id/nav_broadcast"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_broadcast" />

        <item
            android:id="@+id/nav_total"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_total" />

        <item
            android:id="@+id/nav_addon"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_addon" />
    </group>
</menu>